# AI-Image-Segmentation

./: .gitignore  CLAUDE.md
backend/: .gitignore  .pre-commit-config.yaml  SETUP.md  __main__.py  config.py  config.toml  poc.py  pyproject.toml
backend/ai/models/: config.py  inpainting.py  segmentation.py
backend/app/: config.py
backend/app/inpainting/: __init__.py  lama_model.py  utils.py
backend/app/segmentation/: __init__.py  base.py  sam2_model.py
backend/utils/: lama.py  logger.py  mask.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.vue
